CHANGES-1.4.txt
---------------

CHANGES IN CUPS V1.4.7

	- Documentation changes (STR #3710, STR #3720, STR #3745, STR #3750,
	  STR #3757)
	- "lp" and "lpr" failed to print with Kerberos enabled (STR #3768)
	- The web interface now shows the manual URI entry form for auto-
	  detected LPD printers without a queue name (STR #3755)
	- The cupsctl program now displays an error if you try to directly set
	  the Port or Listen directives (STR #3749)
	- PPD files with "*JobPatchFile: bla" no longer fail to load in relaxed
	  conformance mode (STR #3747)
	- The scheduler generated a bad notify-text string for printer state
	  change notifications (STR #3739)
	- The scheduler incorrectly updated printers.conf when it really needed
	  to update classes.conf or remote.cache (STR #3726)
	- Hardwired remote printers with options did not work (STR #3717)
	- Accessing the CUPS web interface using a CNAME-based hostname would
	  sometimes fail due to redirection to the actual hostname (STR #3701)
	- Subscription events had a misspelled attribute (STR #3693)
	- PIE support was broken (STR #3691)
	- "make check" failed if LC_MESSAGES was set (STR #3765)
	- Fixed the configure script to always look for the pkg-config script
	  (STR #3761)
	- The scheduler now only looks up interface hostnames if HostNameLookups
	  are enabled (STR #3737)
	- Fixed a compilation problem on DragonFly BSD (STR #3738)
	- The default PageLogFormat value had the username and job ID swapped
	  from CUPS 1.3.x (STR #3727)
	- The web interface did not allow setting of a default custom page size
	  (STR #3707)
	- The scheduler could crash if a browsed printer times out while a job
	  is printing (STR #3754)
	- The scheduler incorrectly mapped custom page sizes to standard sizes
	  (STR #3764)
	- cupsfilter and pstops did not map IPP attributes to PPD options due to
	  a change in cupsMarkOptions (STR #3756)
	- The scheduler did not always show the most recent status message from